Fixed bugs related to horizontal scroll and resize

--- a/src/style.sass
+++ b/src/style.sass
@@ -77,7 +77,7 @@ section
 .work-container
   display: grid
   grid-template-columns: repeat(7, 1fr)
-  width: calc((min(100%, 512px) - 32px) * 7)
+  width: calc((min(100% - 32px, 512px)) * 7)
 
   height: 1024px
   max-height: 100dvh
